@@ -3,6 +3,13 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/02/12
+	* Corrected Spider Web casting around caster instead of target's position.
+	* Corrected a possible crash during login due to checking for the incorrect
+	  variable (lets pc_calc_status be invoked when it shouldn't)
+	* Added bounds checking to map_foreachincell.
+	* Opt2 values (poison, blind, and so on) are now resent on warp/map-change.
+	* Corrected description of isloggedin script command. [Skotlex]
 2007/02/11
 	* Fixed the inverted behavior of display_skill_fail, caused by r9823
 	* Fixed @loadnpc not updating the script_event[] array
