@@ -1530,7 +1530,7 @@ int status_calc_pc(struct map_session_data* sd,int first)
 	int i,index;
 	int skill,refinedef=0;
 
-	if(sd->state.connect_new && !(first&1)) //Shouldn't invoke yet until player is done loading.
+	if(!sd->state.auth && !(first&1)) //Shouldn't invoke yet until player is done loading.
 		return -1;
 
 	if (++calculating > 10) //Too many recursive calls!
@@ -2413,12 +2413,11 @@ int status_calc_homunculus(struct homun_data *hd, int first)
 
 	status->aspd_rate = 1000;
 
-	/* //this calc is useless since status_calc_bl(SCB_ALL) does it already
 	skill = (1000 -4*status->agi -status->dex)
 			*hd->homunculusDB->baseASPD/1000;
 
 	status->amotion = cap_value(skill,battle_config.max_aspd,2000);
-	status->adelay = status->amotion; //It seems adelay = amotion for Homunculus.*/
+	status->adelay = status->amotion; //It seems adelay = amotion for Homunculus.
 
 	status_calc_misc(&hd->bl, status, hom->level);
 	status_calc_bl(&hd->bl, SCB_ALL); //Status related changes.
